--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,1 +1,45 @@
+.menu-header {
+    font-family: monospace;
+    color: #000000;
+    background-color: #757C96;
+    width: 80%;
+    text-align: center;
+    font-size: 17px;
+    border-radius: 4px;
+}
 
+.menu-ul {
+    position: fixed;
+    left: -500px;
+    height: 478px;
+    width: 250px;
+    background: #f2e8ca;
+    border-radius: 4px;
+    color: white;
+    margin-left: 110px;
+    margin-top: -67px;
+    overflow: scroll;
+    overflow-x: hidden;
+    max-height: 478px;
+}
+
+.menu:focus-within .menu-ul {
+    left: 0;
+    transition: 0.6s;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #757C96;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #595e72;
+}
