--- a/css/menus/edit_and_shape_menu.css
+++ b/css/menus/edit_and_shape_menu.css
@@ -1,1 +1,53 @@
+.menu-li {
+    list-style-type: none;
+    margin-top: 5px;
+    margin-left: 30px;
+    padding: 0;
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    font-family: monospace;
+    font-size: 25px;
+    border-radius: 4px;
+}
 
+.li-a {
+    margin-top: 10px;
+    text-align: center;
+    text-decoration: none;
+    text-align: center;
+    display: block;
+    color: #030303;
+    margin-left: 35px;
+}
+
+.menu-hr {
+    width: 220px;
+    border-top: 1px solid #757C96;
+    margin-left: -5px;
+}
+
+.menu-li:hover .images {
+    transform: scale(1.1);
+}
+
+.menu-li:hover .li-a {
+    color: #757C96;
+}
+
+.menu-li:hover {
+    cursor: pointer;
+}
+
+.images {
+    float: left;
+    margin-top: 10px;
+}
+
+#edit-menu {
+    margin-top: -173px;
+}
+
+#shape-menu {
+    margin-top: -383px;
+}
